feat: add simd add/sub/mul expressions